[package]
name = "sdb-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
num_cpus = "1.16.0"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
rayon = "1.10.0"
futures = "0.3.31"
thingbuf = "0.1.6"

[[bench]]
name = "bench"
harness = false